# mcp-server

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  tabs.tsx
dashboard/src/hooks/: useSyncData.ts
dashboard/src/lib/: api.ts
docker/: Dockerfile
sync_agent/: __init__.py  __main__.py  config.py  prompts.py  report.py  runner.py  watch.py
sync_mcp/: __init__.py  __main__.py  app.py  autosync.py  ci_import.py  config.py  git_watch.py  http_proxy.py  models.py  notifier.py  onboarding.py  openapi_diff.py  openapi_import.py  project_context.py  snapshot_ops.py  state.py
sync_mcp/api/: __init__.py  routes.py
sync_mcp/auth/: __init__.py  deps.py  passwords.py  rbac.py  service.py  tokens.py
sync_mcp/mcp/: __init__.py  server.py
sync_mcp/storage/: __init__.py  base.py  json_store.py  sqlite_store.py
tests/: conftest.py  test_api.py  test_http_proxy.py  test_openapi.py  test_openapi_diff.py  test_rbac.py  test_roadmap.py  test_state.py  test_sync_agent.py  test_sync_modes.py
