[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sync-mcp"
version = "0.1.0"
description = "Self-hosted MCP server for real-time frontend/backend team synchronization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.28,<2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.12",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[project.scripts]
sync-mcp = "sync_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["sync_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
